feat: Deployment within PR/Branch detail page (#88)
