# server/application-server/src/main/java/de/tum/cit/aet/helios/branch/BranchController.java
@@ -2,6 +2,7 @@ package de.tum.cit.aet.helios.branch;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -21,5 +22,12 @@ public class BranchController {
     public ResponseEntity<List<BranchInfoDTO>> getAllBranches() {
         List<BranchInfoDTO> branches = branchService.getAllBranches();
         return ResponseEntity.ok(branches);
+    }
+
+    @GetMapping("/repository/{repoId}/name/{name}")
+    public ResponseEntity<BranchInfoDTO> getBranchByRepositoryIdAndName(@PathVariable Long repoId, @PathVariable String name) {
+        return branchService.getBranchInfo(repoId, name)
+                .map(ResponseEntity::ok)
+                .orElseGet(() -> ResponseEntity.notFound().build());
     }
 }
