# server/application-server/src/main/java/de/tum/cit/aet/helios/deployment/DeployRequest.java
@@ -1,0 +1,8 @@
+package de.tum.cit.aet.helios.deployment;
+
+import org.springframework.lang.NonNull;
+
+public record DeployRequest(
+    @NonNull Long environmentId,
+    @NonNull String branchName) {
+}
